--- a/views/inherit_certificate_views.xml
+++ b/views/inherit_certificate_views.xml
@@ -6,6 +6,14 @@
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='work_email']" position="after">
+                <field name="skype_name"/>
+            </xpath>
+
+            <xpath expr="//field[@name='resource_calendar_id']" position="before">
+                <field name="joining_date"/>
+            </xpath>
+
             <xpath expr="//notebook/page[1]" position="after">
                 <page string="Certification">
                     <field name="certificate_ids"/>
